fixed issue where grid was shifting based on screen size, also removed space between rows

--- a/snake/snake.css
+++ b/snake/snake.css
@@ -27,25 +27,34 @@ p {
 }
 
 #game-board {
-  margin-left: 20%;
+  margin-left: 25%;
   margin-top: 5%;
-  border: 5px solid black;
-  max-height: 700px;
-  max-width: 1200px;
-  min-height: 700px;
-  min-width: 1200px;
+  border: 5px solid blue;
+  /* max-height: 500px;
+  max-width: 800px;
+  min-height: 500px;
+  min-width: 800px; */
+  /* height: 500px; */
+  width: 1032px;
+
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  /* justify-content: flex-start;
+  align-items: flex-start; */
+  /* flex-grow: 0;
+  flex-shrink: 0; */
+  /* flex-basis: auto; */
 }
 
 .cell {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   height: 25px;
   width: 25px;
   border: 1px solid black;
+  flex-grow: 0;
+  flex-shrink: 0;
+  /* background-color: blue; */
 }
 
 #start-button {
